# l4d2-misarmy-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  appmanifest_222860.acf  compile.sh  custom_maps.py  dev.sh  docker-compose.yml.tmpl  docker-entrypoint.sh  esbuild.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
addons/sourcemod/configs/: admins_simple.ini  autorecorder.cfg  matchmodes.txt
addons/sourcemod/gamedata/: l4d2_viciousplugins.txt  sourcetvmanager.games.txt
addons/sourcemod/plugins/: admincheats.smx  autorecorder.smx  campaigns.smx  confoglcompmod.smx  demo_recorder.smx  fakelag.smx  l4d2_cfg_on_hostname.smx  l4d2_mix.smx  l4d2_mixmap.smx  l4d2_spectating_cheat.smx  l4d2_tank_facts_announce.smx  l4d2_tank_is_comming.smx  l4d2_tank_loss_announce.smx  l4d2_vote_manager3.smx  l4d_revive.smx  l4d_spot_marker.smx  match_announce.smx  pause.smx
addons/sourcemod/scripting/: pause.sp  (+46 more)
cfg/: confogl_personalize.cfg  server.cfg  sharedplugins.cfg
cfg/sourcemod/: L4D_Cloud_Damage.cfg  WeaponHandling.cfg  l4d2_afk_manager.cfg  l4d2_guncontrol.cfg  l4d2_specting_cheat.cfg  l4d_spot_marker.cfg  plugin.L4D2PsychoticWitch.cfg  vomit_screen_fade.cfg
config/: dev.yml  prod.yml
runner/: __main__.py  api.py  args.py  logger.py  state.py
runner/server/: matchmodes.py  server.py
scripts/: download_maps.py  generate_kv.py
src/: config.ts  index.ts  logger.ts  monitor.ts  server.ts
src/types/: source-server-query.d.ts
src/update/: configs.ts  index.ts  kv.ts  maps.ts  matchmodes.ts  mods.ts  repo.ts
src/utils/: fs.ts
(+128 files in other folders)
